[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=1]

[node name="Inventory" type="Node"]
script = ExtResource( 1 )

[node name="HUD" type="Node" parent="."]

[node name="Level" type="Label" parent="HUD"]
margin_left = 15.0
margin_top = 11.0
margin_right = 77.0
margin_bottom = 25.0
text = "Level: 00"

[node name="HP" type="Label" parent="HUD"]
margin_left = 17.0
margin_top = 30.0
margin_right = 79.0
margin_bottom = 44.0
text = "HP: 100"

[node name="Money" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 47.0
margin_right = 91.0
margin_bottom = 61.0
text = "Money: 000"

[node name="EXP" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 65.0
margin_right = 91.0
margin_bottom = 79.0
text = "EXP: 000"

[node name="Damage" type="Label" parent="HUD"]
margin_left = 16.0
margin_top = 84.0
margin_right = 100.0
margin_bottom = 98.0
text = "Damage: 000"

[node name="Buttons" type="Node" parent="."]

[node name="Return" type="Button" parent="Buttons"]
margin_left = 207.0
margin_top = 462.0
margin_right = 370.0
margin_bottom = 512.0
text = "Return"

[node name="Equip_1" type="Button" parent="Buttons"]
margin_left = 62.0
margin_top = 299.0
margin_right = 225.0
margin_bottom = 349.0
text = "Equip_1"

[node name="Equip_2" type="Button" parent="Buttons"]
margin_left = 317.0
margin_top = 258.0
margin_right = 480.0
margin_bottom = 308.0
text = "Equip_2"

[node name="Equip_3" type="Button" parent="Buttons"]
margin_left = 542.0
margin_top = 313.0
margin_right = 705.0
margin_bottom = 363.0
text = "Equip_3"

[connection signal="pressed" from="Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Buttons/Equip_1" to="." method="_on_Equip_1_pressed"]
[connection signal="pressed" from="Buttons/Equip_2" to="." method="_on_Equip_2_pressed"]
[connection signal="pressed" from="Buttons/Equip_3" to="." method="_on_Equip_3_pressed"]
